Fix whitespace around pipe on longer labels

--- a/src/calendarBookingForm/Components/TimeSlot.scss
+++ b/src/calendarBookingForm/Components/TimeSlot.scss
@@ -33,7 +33,7 @@
 
     &::after {
         color: black;
-        content: "\00a0\00a0|";
+        content: "\00a0\00a0|\00a0\00a0";
         top: -1px;
         position: relative;
     }
@@ -43,6 +43,7 @@
     font-size: 12px;
     font-weight: 500;
     text-align: center;
+    margin-right: 3px;
 }
 
 .TimeSlot-SpotAvailable.SoldOut {
